--- a/Pages/bloghtmllaravel.html
+++ b/Pages/bloghtmllaravel.html
@@ -18,7 +18,7 @@
         <div class="app_logo">
             <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
             <img class="app__title2" src="../assets/images/ufakKS.png" />
-            <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
+            <a  class="notactivee" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
         <img class="menu__kapali" src="../assets/images/kapalı.svg"/>
@@ -27,7 +27,6 @@
         <ul class="app__links">
             <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
@@ -72,7 +71,7 @@
     Projenin tamamı (db ile birlikte) github adresimde bulunmaktadır. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.  </p>
    <br>
     <div class="wrapper">
-        <h5>Github <a href="https://github.com/Muhammet15/Blog" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+        <h5>Github <a style="  display: inline-block !important;" href="https://github.com/Muhammet15/Blog" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
     </div>
 </main>
 <div class="footer-clean">
