--- a/Pages/bloglaravel.html
+++ b/Pages/bloglaravel.html
@@ -27,7 +27,7 @@
         <ul class="app__links">
             <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
+
             <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
@@ -81,7 +81,7 @@
         <br><br>Projenin tamamı (db ile birlikte) github adresimde bulunmaktadır. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz. </p>
         <br>
         <div class="wrapper">
-            <h5>Github <a href="https://github.com/Muhammet15/Quiz-laravel-8" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+            <h5>Github <a  style="  display: inline-block !important;" href="https://github.com/Muhammet15/Quiz-laravel-8" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
         </div>
 
 </main>
