--- a/Pages/pythontelegram.html
+++ b/Pages/pythontelegram.html
@@ -28,7 +28,6 @@
         <ul class="app__links">
             <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
@@ -79,7 +78,7 @@
         <br><br> Github adresime giderek kodlarına erişebilir ve indirebilirsiniz. </p>
         <br>
         <div class="wrapper">
-            <h5>Github <a href="https://github.com/Muhammet15/Python-Telegram-Bot" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+            <h5>Github <a  style="  display: inline-block !important;" href="https://github.com/Muhammet15/Python-Telegram-Bot" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
         </div>
   
 </main>
