--- a/htmlcss.html
+++ b/htmlcss.html
@@ -24,7 +24,6 @@
         <ul class="app__links">
             <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
 
@@ -58,7 +57,7 @@
         <div class="app__listwrap">
             <div class="app_postcard">
                 <img class="postimage" src="./assets/images/html.png" /> 
-                 <strong class="postdate">02 01 2023</strong>
+                 <strong class="postdate">Ocak 01 2023</strong>
                  <h3 class="posttitle">(Html-Css-JavaScript) Proje Tanıtım Web Sitesi </h3>
                  <p class="postinfo">
                     Projelerimi ve kendimi tanıttığım halihazırda yayında olan sitedir. 
