--- a/iletisim.html
+++ b/iletisim.html
@@ -26,7 +26,6 @@
     <ul class="app__links">
         <a href="/"><li>PORTFÖY</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="hakkimda.html"><li>HAKKIMDA</li></a>
         <a href="iletisim.html"><li class="active">İLETİŞİM</li></a>
     </ul>
     </nav>
@@ -50,8 +49,8 @@
                 <div class="screen-body">
                   <div class="screen-body-item left">
                     <div class="app-title">
-                      <span style="color:#ea1d6f">İletişime</span>
-                      <span style="color:#ea1d6f">Geç</span>
+                      <span class="colors">İletişime</span>
+                      <span class="colors">Geç</span>
                     </div>
                     <div class="app-contact">Tel : +90 531 285 30 58</div>
                   </div>
@@ -71,7 +70,7 @@
                         <input class="app-form-control" type="subject" id="subject" placeholder="KONU BAŞLIĞI" autocomplete="off">
                       </div>
                       <div class="app-form-group message">
-                        <textarea class="app-form-control" cols="20"  rows="5" id="message" placeholder="MESAJ"  required></textarea>
+                        <textarea class="app-form-control textarea" cols="20"  rows="5" id="message" placeholder="MESAJ"  required></textarea>
                       </div>
                       <div class="app-form-group buttons">
                         <button  id="btncancel" class="app-form-button">CANCEL</button>
