--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="./style.css" rel="stylesheet"></link>
     <link href="./post_detail.css" rel="stylesheet"></link>
     <link href="./pages.css" rel="stylesheet"></link>
+    <link href="./trans.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
@@ -19,16 +20,21 @@
             <img class="app__title2" src="./assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
-        </a></div>
+        </a>
+    </div>
         <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
     <ul class="app__links">
         <a href="/"><li class="active">PORTFÖY</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="hakkimda.html"><li>HAKKIMDA</li></a>
         <a href="iletisim.html"><li>İLETİŞİM</li></a>
-    </ul>
+        <a href="/"><li> <img class="iconlan active" src="./assets/images/turkey.png"/></li></a>
+        <a href="./eng/index.html"><li> <img class="iconlan" src="./assets/images/united-kingdom.png"/></li></a>
+     </ul>  
+    
+    <!-- <a style="margin-left: 8px;" href="./eng/index.html"">ENG</a>
+    <a style="margin-left: 8px;" href="./index.html"">TR</a> -->
     </nav>
     <main>
         <div class="app__showcase">
@@ -104,7 +110,7 @@
             </div>
              <div class="app_postcard">
                 <img class="postimage" src="./assets/images/html.png" /> 
-                 <strong class="postdate">02 01 2023</strong>
+                 <strong class="postdate">Ocak 01 2023</strong>
                  <h3 class="posttitle">(Html-Css-JavaScript) Proje Tanıtım Web Sitesi </h3>
                  <p class="postinfo">
                     Projelerimi ve kendimi tanıttığım halihazırda yayında olan sitedir. 
