--- a/laravel.html
+++ b/laravel.html
@@ -22,10 +22,9 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="PORTFÖY.html"><li>PORTFÖY</li></a>
-            <a href="/"><li class="active">BLOG</li></a> 
+            <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
+
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
 
