--- a/Pages/Php-html-css.html
+++ b/Pages/Php-html-css.html
@@ -27,7 +27,7 @@
         <ul class="app__links">
             <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
+
             <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
@@ -69,7 +69,7 @@
         gerekli sayfaları include yaparak dinamik olarak sayfa içeriği, menüler, üyeler gibi bir çok işlem yapılabilir. Projenin tamamı (db ile birlikte) github adresimde bulunmaktadır. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.</p>
         <br>
         <div class="wrapper">
-            <h5>Github <a href="https://github.com/Muhammet15/phpproject" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+            <h5>Github <a   style="  display: inline-block !important;" href="https://github.com/Muhammet15/phpproject" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
         </div>
 </main>
 <div class="footer-clean">
