Son değişiklikler yapılduı

--- a/eng/Pages/bloghtmllaravel.html
+++ b/eng/Pages/bloghtmllaravel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">https
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -79,30 +79,30 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-4 col-md-3 item">
-                    <h3>Ben Kimim</h3>
+                    <h3>Who am i</h3>
                     <ul>
-                        <li><a href="#">Ben Kimim</a></li>
-                        <li><a href="#">Kariyer</a></li>
-                        <li><a href="#">İletişim</a></li>
+                        <li><a >Who am i</a></li>
+                        <li><a >Career</a></li>
+                        <li><a href="../../eng/iletisim.html">Communication</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
-                    <h3>Hakkımda</h3>
+                    <h3>About me</h3>
                     <ul>
-                        <li><a href="#">KayacanSoftware</a></li>
-                        <li><a href="#">Cv</a></li>
-                        <li><a href="#">Yardım</a></li>
+                        <li><a >KayacanSoftware</a></li>
+                        <li><a href="../../assets/pdf/Muhammet Ali Kayacan CV.pdf" >Cv</a></li>
+                        <li><a >Help</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
-                    <h3>Kariyer</h3>
+                    <h3>Career</h3>
                     <ul>
-                        <li><a href="#">Bigisayar Mühendisi</a></li>
-                        <li><a href="#">Yazılım</a></li>
-                        <li><a href="#">Diller</a></li>
+                        <li><a >Computer engineer</a></li>
+                        <li><a >Software</a></li>
+                        <li><a >Languages</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a ><i class="icon ion-social-facebook"></i></a><a ><i class="icon ion-social-twitter"></i></a><a ><i class="icon ion-social-snapchat"></i></a>
                     <p class="copyright">KayacanSoftware © 2023</p>
                 </div>
             </div>
