--- a/eng/iletisim.html
+++ b/eng/iletisim.html
@@ -8,25 +8,26 @@
     <title>Muhammet Ali Kayacan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="./style.css" rel="stylesheet"></link>
-    <link href="./contact.css" rel="stylesheet"></link>
-    <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="../style.css" rel="stylesheet"></link>
+    <link href="../contact.css" rel="stylesheet"></link>
+    <link href="../post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="./assets/images/ufakKS.png" />
+            <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
+            <img class="app__title2" src="../assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
-                <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
+                <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
-        <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
-        <img class="menu__acik" src="./assets/images/acik.svg" />
+        <img class="menu__kapali" src="../assets/images/kapalı.svg"/>
+        <img class="menu__acik" src="../assets/images/acik.svg" />
 
+  
     <ul class="app__links">
-        <a href="/"><li>PORTFÖY</li></a> 
+          <a href="../eng/index.html"><li>PORTFOLIO</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="iletisim.html"><li class="active">İLETİŞİM</li></a>
+        <a href="../eng/iletisim.html"><li class="active">CONTACT</li></a>
     </ul>
     </nav>
     <main>
@@ -49,8 +50,8 @@
                 <div class="screen-body">
                   <div class="screen-body-item left">
                     <div class="app-title">
-                      <span class="colors">İletişime</span>
-                      <span class="colors">Geç</span>
+                      <span class="colors">Contact</span>
+                      <span class="colors">Us</span>
                     </div>
                     <div class="app-contact">Tel : +90 531 285 30 58</div>
                   </div>
@@ -95,27 +96,27 @@
           <div class="container">
               <div class="row justify-content-center">
                   <div class="col-sm-4 col-md-3 item">
-                      <h3>Ben Kimim</h3>
+                      <h3>Who am i</h3>
                       <ul>
-                          <li><a>Ben Kimim</a></li>
-                          <li><a>Kariyer</a></li>
-                          <li><a href="/iletisim.html">İletişim</a></li>
+                          <li><a >Who am i</a></li>
+                          <li><a >Career</a></li>
+                          <li><a href="../eng/iletisim.html">Communication</a></li>
                       </ul>
                   </div>
                   <div class="col-sm-4 col-md-3 item">
-                      <h3>Hakkımda</h3>
+                      <h3>About me</h3>
                       <ul>
-                          <li><a>KayacanSoftware</a></li>
-                          <li><a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf">Cv</a></li>
-                          <li><a>Yardım</a></li>
+                          <li><a >KayacanSoftware</a></li>
+                          <li><a href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" >Cv</a></li>
+                          <li><a >Help</a></li>
                       </ul>
                   </div>
                   <div class="col-sm-4 col-md-3 item">
-                      <h3>Kariyer</h3>
+                      <h3>Career</h3>
                       <ul>
-                          <li><a >Bigisayar Mühendisi</a></li>
-                          <li><a >Yazılım</a></li>
-                          <li><a >Diller</a></li>
+                          <li><a >Computer engineer</a></li>
+                          <li><a >Software</a></li>
+                          <li><a >Languages</a></li>
                       </ul>
                   </div>
                   <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a ><i class="icon ion-social-facebook"></i></a><a ><i class="icon ion-social-twitter"></i></a><a ><i class="icon ion-social-snapchat"></i></a>
@@ -125,11 +126,10 @@
           </div>
       </footer>
     </div>
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-    <script src="./app.js" ></script>
-    <script src="./contact.js" ></script>
+    <script src="../app.js" ></script>
+    <script src="../contact.js" ></script>
     <script src=
     "https://smtpjs.com/v3/smtp.js">
   </script>
