--- a/eng/laravel.html
+++ b/eng/laravel.html
@@ -90,34 +90,34 @@
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Who am i</h3>
                         <ul>
-                            <li><a href="#">Who am i</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Communication</a></li>
+                            <li><a >Who am i</a></li>
+                            <li><a >Career</a></li>
+                            <li><a href="../eng/iletisim.html">Communication</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>About me</h3>
                         <ul>
-                            <li><a href="#">KayacanSoftware</a></li>
-                            <li><a href="#">Cv</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a >KayacanSoftware</a></li>
+                            <li><a href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" >Cv</a></li>
+                            <li><a >Help</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Career</h3>
                         <ul>
-                            <li><a href="#">Computer engineer</a></li>
-                            <li><a href="#">Software</a></li>
-                            <li><a href="#">Languages</a></li>
+                            <li><a >Computer engineer</a></li>
+                            <li><a >Software</a></li>
+                            <li><a >Languages</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                    <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a ><i class="icon ion-social-facebook"></i></a><a ><i class="icon ion-social-twitter"></i></a><a ><i class="icon ion-social-snapchat"></i></a>
                         <p class="copyright">KayacanSoftware © 2023</p>
                     </div>
                 </div>
             </div>
         </footer>
-    </div>
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="./app.js" ></script>
