--- a/eng/Pages/laraveleticaret.html
+++ b/eng/Pages/laraveleticaret.html
@@ -73,7 +73,7 @@
         The entire project (with the db) is available on my github. You can access and download their codes by going to my Github address. </p>
         <br>
         <div class="wrapper">
-            <h5>Github <a  style="  display: inline-block !important;" href="https://github.com/Muhammet15/Quiz-laravel-8" target="_blank" id="style-2" data-replace="Proje link"><span> Project link</span></a></h5>
+            <h5>Github <a  style="  display: inline-block !important;" href="https://github.com/Muhammet15/LaravelEticaretProject" target="_blank" id="style-2" data-replace="Proje link"><span> Project link</span></a></h5>
         </div>
 </main>
 <div class="footer-clean">
@@ -83,28 +83,28 @@
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Who am i</h3>
                     <ul>
-                        <li><a href="#">Who am i</a></li>
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Communication</a></li>
+                        <li><a >Who am i</a></li>
+                        <li><a >Career</a></li>
+                        <li><a href="../../eng/iletisim.html">Communication</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
                     <h3>About me</h3>
                     <ul>
-                        <li><a href="#">KayacanSoftware</a></li>
-                        <li><a href="#">Cv</a></li>
-                        <li><a href="#">Help</a></li>
+                        <li><a >KayacanSoftware</a></li>
+                        <li><a href="../../assets/pdf/Muhammet Ali Kayacan CV.pdf" >Cv</a></li>
+                        <li><a >Help</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Career</h3>
                     <ul>
-                        <li><a href="#">Computer engineer</a></li>
-                        <li><a href="#">Software</a></li>
-                        <li><a href="#">Languages</a></li>
+                        <li><a >Computer engineer</a></li>
+                        <li><a >Software</a></li>
+                        <li><a >Languages</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a ><i class="icon ion-social-facebook"></i></a><a ><i class="icon ion-social-twitter"></i></a><a ><i class="icon ion-social-snapchat"></i></a>
                     <p class="copyright">KayacanSoftware © 2023</p>
                 </div>
             </div>
