--- a/eng/Pages/pythontelegram.html
+++ b/eng/Pages/pythontelegram.html
@@ -13,12 +13,13 @@
     <link href="../../style.css" rel="stylesheet"></link>
     <link href="../../post_detail.css" rel="stylesheet"></link>
     <link href="../../link.css" rel="stylesheet"></link>
+    <link rel="icon" type="image/png" href="../../assets/images/mk.png"/>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="../../assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="../../assets/images/ufakKS.png" />
+            <img id="example2" class="app__title" src="../../assets/images/_Kayacan Software-1.png" />
+            <img  id="example2" class="app__title2" src="../../assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="../../assets/images/hire_me.svg"/> </a>
         </a></div>
