--- a/eng/iletisim.html
+++ b/eng/iletisim.html
@@ -11,12 +11,13 @@
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../contact.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
+    <link rel="icon" type="image/png" href="../assets/images/mk.png"/>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="../assets/images/ufakKS.png" />
+          <img id="example2" class="app__title" src="../assets/images/_Kayacan Software-1.png" />
+          <img id="example2"  class="app__title2" src="../assets/images/ufakKS.png" /> 
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
@@ -59,19 +60,19 @@
                     <div class="app-form">
                       <form method="post" >
                       <div class="app-form-group">
-                        <input class="app-form-control" type="text" id="name" placeholder="AD SOYAD"  autocomplete="off">
+                        <input class="app-form-control" type="text" id="name" placeholder="Name"  autocomplete="off">
                       </div>
                       <div class="app-form-group">
                         <input class="app-form-control"  type="email" name="email_id" id="email_id" placeholder="EMAIL" multiple required>
                       </div>
                       <div class="app-form-group">
-                        <input class="app-form-control" type="tel" id="no" placeholder="ILETISIM NO" autocomplete="off">
+                        <input class="app-form-control" type="tel" id="no" placeholder="CONTACT NUMBER" autocomplete="off">
                       </div>
                       <div class="app-form-group">
-                        <input class="app-form-control" type="subject" id="subject" placeholder="KONU BAŞLIĞI" autocomplete="off">
+                        <input class="app-form-control" type="subject" id="subject" placeholder="SUBJECT" autocomplete="off">
                       </div>
                       <div class="app-form-group message">
-                        <textarea class="app-form-control textarea" cols="20"  rows="5" id="message" placeholder="MESAJ"  required></textarea>
+                        <textarea class="app-form-control textarea" cols="20"  rows="5" id="message" placeholder="MESSAGE"  required></textarea>
                       </div>
                       <div class="app-form-group buttons">
                         <button  id="btncancel" class="app-form-button">CANCEL</button>
