--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link href="./post_detail.css" rel="stylesheet"></link>
     <link href="./pages.css" rel="stylesheet"></link>
     <link href="./trans.css" rel="stylesheet"></link>
+    <link rel="icon" type="image/png" href="./assets/images/mk.png"/>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="./assets/images/ufakKS.png" />
+          <img id="example" class="app__title" src="./assets/images/_Kayacan Software-1.png" />
+            <img id="example"  class="app__title2" src="./assets/images/ufakKS.png" /> 
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
         </a>
@@ -36,6 +37,7 @@
     <!-- <a style="margin-left: 8px;" href="./eng/index.html"">ENG</a>
     <a style="margin-left: 8px;" href="./index.html"">TR</a> -->
     </nav>
+
     <main>
         <div class="app__showcase">
             <div class="app__showcase-info">
