--- a/eng/Pages/Php-html-css.html
+++ b/eng/Pages/Php-html-css.html
@@ -12,12 +12,13 @@
     <link href="../../style.css" rel="stylesheet"></link>
     <link href="../../post_detail.css" rel="stylesheet"></link>
     <link href="../../link.css" rel="stylesheet"></link>
+    <link rel="icon" type="image/png" href="../../assets/images/mk.png"/>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="../../assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="../../assets/images/ufakKS.png" />
+            <img id="example2" class="app__title" src="../../assets/images/_Kayacan Software-1.png" />
+            <img  id="example2" class="app__title2" src="../../assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="../../assets/images/hire_me.svg"/> </a>
         </a></div>
@@ -46,9 +47,9 @@
                 <div class="slider2">
                     <img class="img active " src="../../assets/images/sunucu1.png">
                     <img class="img" src="../../assets/images/sunucu2.png">
-                    <img class="img " src="../../assets/images/sunucu3.png">
-                    <img class="img " src="../../assets/images/sunucu4.png">
-                    <img class="img " src="../../assets/images/sunucu5.png">
+                    <img class="img" src="../../assets/images/sunucu3.png">
+                    <img class="img" src="../../assets/images/sunucu4.png">
+                    <img class="img" src="../../assets/images/sunucu5.png">
                     <p class="ptag" id="output"></p>  
                 </div>
                 
@@ -108,8 +109,8 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="../app.js" ></script>
-      <script src="../slider.js" ></script>
+<script src="../../app.js" ></script>
+      <script src="../../slider.js" ></script>
 
 </body>
 </html>
