--- a/eng/php.html
+++ b/eng/php.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
+    <link rel="icon" type="image/png" href="../assets/images/mk.png"/>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="../assets/images/ufakKS.png" />
+            <img id="example2" class="app__title" src="../assets/images/_Kayacan Software-1.png" />
+            <img id="example2"  class="app__title2" src="../assets/images/ufakKS.png" /> 
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
