--- a/iletisim.html
+++ b/iletisim.html
@@ -29,6 +29,8 @@
         <a href="/"><li>PORTFÖY</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
         <a href="iletisim.html"><li class="active">İLETİŞİM</li></a>
+        <a href="/"><li> <img class="iconlan active" src="./assets/images/turkey.png"/></li></a>
+        <a href="./eng/index.html"><li> <img class="iconlan" src="./assets/images/united-kingdom.png"/></li></a>
     </ul>
     </nav>
     <main>
@@ -132,8 +134,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="./app.js" ></script>
     <script src="./contact.js" ></script>
-    <script src=
-    "https://smtpjs.com/v3/smtp.js">
+    <script src="https://smtpjs.com/v3/smtp.js">
   </script>
 </body>
 </html>
