--- a/eng/php.html
+++ b/eng/php.html
@@ -26,6 +26,8 @@
         <a href="../eng/index.html"><li class="active">PORTFOLIO</li></a> 
         <a href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
         <a href="../eng/iletisim.html"><li>CONTACT</li></a>
+        <a href="../index.html"><li> <img class="iconlan" src="../assets/images/turkey.png"/></li></a>
+        <a href="./index.html"><li> <img class="iconlan active" src="../assets/images/united-kingdom.png"/></li></a>
     </ul>
     </nav>
     <main>
@@ -47,9 +49,9 @@
             <img class="app__showcase-image" src="../assets/images/coding.png"/>
         </div>
         <ul class="app__blog-catogories">
-            <a  href="index.html"> <li class="item ">All Projects</li></a>
+            <a  href="index.html"> <li class="item ilk ">All Projects</li></a>
             <a  href="htmlcss.html"> <li  class="item">Html-Css</li> </a>
-            <a  href="php.html">  <li class="item active ilk">Php</li></a>
+            <a  href="php.html">  <li class="item active">Php</li></a>
             <a  href="laravel.html"> <li class="item">Laravel</li></a>
             <a  href="python.html"> <li class="item">Python</li></a>
         </ul>
