--- a/eng/python.html
+++ b/eng/python.html
@@ -26,6 +26,8 @@
             <a href="../eng/index.html"><li class="active">PORTFOLIO</li></a> 
             <a href="../assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
             <a href="../eng/iletisim.html"><li>CONTACT</li></a>
+            <a href="../index.html"><li> <img class="iconlan" src="../assets/images/turkey.png"/></li></a>
+            <a href="./index.html"><li> <img class="iconlan active" src="../assets/images/united-kingdom.png"/></li></a>
         </ul>
     </nav>
     <main>
