--- a/hakkimda.html
+++ b/hakkimda.html
@@ -29,6 +29,8 @@
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
         <a href="hakkimda.html"><li class="active">HAKKIMDA</li></a>
         <a href="iletisim.html"><li>İLETİŞİM</li></a>
+        <a href="/"><li> <img class="iconlan active" src="./assets/images/turkey.png"/></li></a>
+        <a href="./eng/index.html"><li> <img class="iconlan" src="./assets/images/united-kingdom.png"/></li></a>
     </ul>
     </nav>
     <main>
