--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
     <main>
         <div class="app__showcase">
             <div class="app__showcase-info">
-                <h1>Merhaba</h1>
-                <h3 class="text">Ben...</h3>
-                <p> Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın vermiş olduğu istekle kendime bir web sitesi yaparak diğer 
-                    yapmış olduğum projeleri burada tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
-                    projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
-                    Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
+                <h1> Merhaba,</h1>
+                <br>
+                <p> Her zaman kendisini geliştirmeye dayalı biri olmanın vermiş olduğu istekle kendime bir web sitesi yaparak hazırlamış olduğum projeleri burada tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Php backend ile ilgilenmemden dolayı projelerin çoğunluğu Php dilinde olsa da Python dilinde de hazırlanmış birkaç ufak programın detayı yayınlanmıştır. Bu projelere Github üzerinden ulaşabilirsiniz. 
+                    Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. 
+                    Gezintinizin keyfini çıkarın.
                 </p>
+                <br>
+                <p>Muhammet Ali KAYACAN</p>
+                <p>Bilgisayar Mühendisi</p>
                 <div class="app__links2">
                     <a class="app__link github" href="https://github.com/Muhammet15" target="_blank" ><img src="./assets/images/github.svg"/> Github</a>
                     <a class="app__link linkedin" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank" ><img src="./assets/images/linkedin.svg"/>Linkedin</a>
