--- a/eng/php.html
+++ b/eng/php.html
@@ -33,13 +33,16 @@
     <main>
         <div class="app__showcase">
             <div class="app__showcase-info">
-                <h1>Hi</h1>
-                <h3 class="text">I'm ...</h3>
-                <p> Muhammet Ali Kayacan. I am a computer engineer. With the desire of being someone who is always based on self-development, I made a website for myself and other
-                    I wanted to introduce my projects here. Some of the projects I have done are given as links for you to review. Since I'm dealing with more php backend
-                    Although most of my projects are primarily in php language, the details of a few small programs also made with python have been published. You can access projects with on Github.
-                    For any questions, you can contact me via e-mail or the channels below.
+                <h1>Hi,</h1>
+                <br>
+                <p> I wanted to introduce the projects that I have prepared by making a website for myself with the desire of being someone who is always based on self-development. 
+                    Some of the projects I have done are given as links for you to review. Due to my interest in PHP backend, although most of the projects are in PHP, 
+                    the details of a few small programs prepared in Python have been published. You can access these projects on Github. For any questions, you can contact me via e-mail 
+                    or the channels below. Enjoy your tour.
                 </p>
+                <br>
+                <p>Muhammet Ali KAYACAN</p>
+                <p>Computer engineer</p>
                 <div class="app__links2">
                     <a class="app__link github" href="https://github.com/Muhammet15" target="_blank" ><img src="../assets/images/github.svg"/> Github</a>
                     <a class="app__link linkedin" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank" ><img src="../assets/images/linkedin.svg"/>Linkedin</a>
